--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "indent": [
-            "error",
+            "warn",
             2
         ],
         "linebreak-style": [
